--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,10 +8,15 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
-    <title>Vite + React</title>
+    <title>Chat app</title>
   </head>
   <body>
     <div id="root"></div>
+    <script
+      src="https://widget.cloudinary.com/v2.0/global/all.js"
+      type="text/javascript"
+    ></script>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
